--- a/.gitattributes
+++ b/.gitattributes
@@ -45,3 +45,19 @@
 *.tga filter=lfs diff=lfs merge=lfs -text
 *.tif filter=lfs diff=lfs merge=lfs -text
 *.tiff filter=lfs diff=lfs merge=lfs -text
+# Unity files
+*.anim                  text eol=lf
+*.asmdef                text eol=lf
+*.asset                 text eol=lf
+*.controller            text eol=lf
+*.mat                   text eol=lf
+*.meta                  text eol=lf
+*.overrideController    text eol=lf
+*.prefab                text eol=lf
+*.preset                text eol=lf
+*.spriteatlas           text eol=lf
+*.unity                 text eol=lf
+*.mixer                 text eol=lf
+*.renderTexture         text eol=lf
+*.json                  text eol=lf
+*.xml                   text eol=lf
