--- a/.gitattributes
+++ b/.gitattributes
@@ -61,3 +61,5 @@
 *.renderTexture         text eol=lf
 *.json                  text eol=lf
 *.xml                   text eol=lf
+
+*.cs                    text diff=csharp
