--- a/.gitattributes
+++ b/.gitattributes
@@ -62,4 +62,4 @@
 *.json                  text eol=lf
 *.xml                   text eol=lf
 
-*.cs                    text diff=csharp
+*.cs                    text eol=crlf diff=csharp
